--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,14 +1,14 @@
 main:
 
-  - title: Continual Learning for Abdominal Multi-Organ and Tumor Segmentation
-    authors: Yixiao Zhang, Xinyi Li, Huimiao Chen, Alan Yuille, <strong>Yaoyao Liu*</strong>, Zongwei Zhou* (*Corresponding authors)
-    conference_short: MICCAI
-    conference: International Conference on Medical Image Computing and Computer-Assisted Intervention <strong>(MICCAI)</strong>, 2023.
-    pdf: https://arxiv.org/pdf/2306.00988.pdf
-    code: https://github.com/MrGiovanni/ContinualLearning
-    bibtex: https://bib.yliu.me/MICCAI23.txt
-    image: ./assets/img/teaser_example_2.png
-    notes: Early Accept
+  - title: AI Art Neural Constellation: Revealing the Collective and Contrastive State of AI-Generated and Human Art
+    authors: <strong>Faizan Farooq Khan*</strong>, Diana Kim*, Divyansh Jha, Youssef Mohamed, Hanna H Chang, Ahmed Elgammal, Luba Elliott, Mohamed Elhoseiny (*Equal Contribution)
+    # conference_short: In Review
+    conference:  Arxiv Preprint, 2024
+    pdf: https://arxiv.org/pdf/2402.02453.pdf
+    code: https://github.com/faixan-khan/ArtNeuralConstellation
+    # bibtex: https://bib.yliu.me/MICCAI23.txt
+    image: ./assets/img/ai_art_main_fig.png
+    # notes: Under review, TPAMI, 2024
 
   - title: "Mnemonics Training: Multi-Class Incremental Learning without Forgetting"
     authors: <strong>Yaoyao Liu</strong>, Yuting Su, An-An Liu, Bernt Schiele, Qianru Sun
