--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -2,7 +2,7 @@ main:
 
   - title: "AI Art Neural Constellation: Revealing the Collective and Contrastive State of AI-Generated and Human Art"
     authors: <strong>Faizan Farooq Khan*</strong>, Diana Kim*, Divyansh Jha, Youssef Mohamed, Hanna H Chang, Ahmed Elgammal, Luba Elliott, Mohamed Elhoseiny (*Equal Contribution)
-    conference:  Arxiv Preprint, 2024
+    conference:  Under Review, TPAMI, 2024
     pdf: https://arxiv.org/abs/2402.02453
     code: https://github.com/faixan-khan/ArtNeuralConstellation
     image: ./assets/img/ai_art_main_fig.png
