--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ canonical: https://minimal-light-theme.yliu.me/
 # Links 
 # If you don't need one of them, you may delete the corresponding line.
 google_scholar: https://scholar.google.com/citations?user=vwEC-jUAAAAJ&hl=en&authuser=1
-cv_link: https://github.com/faixan-khan/
+cv_link: https://drive.google.com/file/d/1cDR67PhEexVmo9q0MJFkoPFMXDZGajKV/view?usp=sharing
 github_link: https://github.com/faixan-khan/
 # linkedin: https://www.linkedin.com/
 twitter: https://twitter.com/_faizan_
