--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -9,7 +9,7 @@ main:
     # page: https://class-il.mpi-inf.mpg.de/mnemonics/
     # bibtex: https://class-il.mpi-inf.mpg.de/mnemonics/
     notes: Under Review
-    # image: ./assets/img/cletir.png
+    image: ./assets/img/teaser_rag.png
 
   - title: "Step-by-step Layered Design Generation"
     authors: <strong>Faizan Farooq Khan</strong>, Joseph KJ, Koustava Goswami, Mohamed Elhoseiny, Balaji Vasan Srinivasan
@@ -20,7 +20,7 @@ main:
     # page: https://class-il.mpi-inf.mpg.de/mnemonics/
     # bibtex: https://class-il.mpi-inf.mpg.de/mnemonics/
     notes: Under Review
-    # image: ./assets/img/cletir.png
+    image: ./assets/img/teaser_design.png
 
   - title: "Category-level Text-to-Image Retrieval Improved: Bridging the Domain Gap with Diffusion Models and Vision Encoders"
     authors: <strong>Faizan Farooq Khan</strong>, Vladan Stojnic, Zakaria Laskar, Mohamed Elhoseiny, Giorgos Tolias
